# deepi-python

./: .gitignore  LICENSE  README.md  TODO.md  camera.py  classes_deepi.plantuml  config.py  config.yaml  deepi.conf  deepi.py  deepi.service  deepicamera.py  deploy  deploy_app  deploy_bruv  deploy_node  hullcam.conf  manager.py  node.conf  packages_deepi.plantuml  pistreaming.py  pyproject.toml  recorder.py  requirements.txt  setup.py  setup.sh  streaming.py  test.conf  test_app.py  timelapse.py  webapp.py  webapp2.py  webstream.py
deepi/: __init__.py  camconfig.py  camera.py  camtest.py  config.py  controller.py  deepi.conf  deepicamera.py  lights.py  manager.py  old_camconfig.py  recorder.py  schedule.py  sensors.py  socketstreaming.py  streaming.py  timelapse.py  webapp.py  webstreaming.py
deepi/camera/: camera.py
deepi/conf/: deepi.conf  default.conf  webapp.conf
deepi/static/css/: styles.css
deepi/streaming/: __init__.py  socketstream.py  socketstreaming.py  streaming.py  webstreaming.py
deepi/templates/: index.html
deepi/webapp/: webapp.py
deepi/webapp/static/css/: pure-sidemenu.css  styles.css
deepi/webapp/templates/: index.html  stream.html
docs/: activity.plantuml  classes_deepi.plantuml  classes_deepicamera.plantuml  components copy.plantuml  components.plantuml  packages_deepi.plantuml  sequence-socket.plantuml  sequence.plantuml  usecase.plantuml  websocket.plantuml
resources/: deepi.conf  test.conf
resources/templates/: index.html
streaming/: index.html  streaming.py
webapp/: app.py
